1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "healthnode"
  labels:
    name: "healthnode"
