5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hn-ingress
  namespace: healthnode
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: healthnode-app
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: healthnode-api-service
              port:
                number: 3333
